# Aippt

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.serena/: project.yml
backend/: Dockerfile  app.py  config.py
backend/controllers/: __init__.py  admin_controller.py  admin_membership_controller.py  auth_controller.py  export_controller.py  file_controller.py  material_controller.py  membership_controller.py  notification_controller.py  order_controller.py  page_controller.py  payment_callback_controller.py  pdf_convert_controller.py  project_controller.py  reference_file_controller.py  settings_controller.py  template_controller.py
backend/migrations/versions/: 004_add_user_auth.py  005_add_must_change_password.py  006_add_phone_and_verification_codes.py  (+11 more)
backend/models/: __init__.py  audit_log.py  feature_permission.py  membership_plan.py  notification.py  order.py  project.py  settings.py  system_config.py  task.py  user.py  user_template.py  verification_code.py
backend/scripts/: migrate_preset_templates.py
backend/services/: ai_service.py  alipay_service.py  auth_service.py  cbb_pay_service.py  file_parser_service.py  file_service.py  membership_service.py  order_service.py  prompts.py  sms_service.py  task_manager.py  verification_code_service.py  wechat_pay_service.py
backend/utils/: __init__.py  auth.py  response.py  validators.py
docs/: USER_MANUAL.md
docs/ssl证书/: webtrn.cn.crt  webtrn.cn.key
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
(+112 files in other folders)
